--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   db:
     image: postgres:12.3-alpine
     container_name: 'test02_db'
-    expose:
-      - "5432"
+    # expose:
+    #   - "5432"
     environment: 
       - POSTGRES_DB=flasktest
       - POSTGRES_USER=postgres
